Hack together some script contexts
Put together some example script contexts for scripted fields. This is
almost certainly wrong, but it gets us something to think about.